--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.js"></script>
     </head>
     <body class="d-flex">
-        <aside class="p-3 vh-100" style="width: 380px; overflow: scroll;">
+        <aside class="p-3 vh-100" style="width: 380px; overflow-x: hidden; overflow-y: scroll;">
             <div id="accordion" class="accordion">
                 <!-- <div class="accordion-item">
                 <h2 class="accordion-header">
